Updated the utils to read from the S3 and added the rasterio sessions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ affine = "^2.4.0"
 pandas = "^2.2.3"
 rioxarray = "^0.18.2"
 xarray = "^2025.1.2"
+boto3 = "^1.37.11"
 
 
 [tool.poetry.group.dev.dependencies]
