--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ rioxarray = "^0.18.2"
 xarray = "^2025.1.2"
 boto3 = "^1.37.11"
 python-dotenv = "^1.0.1"
+smart-open = {extras = ["s3"], version = "^7.1.0"}
 
 
 [tool.poetry.group.dev.dependencies]
