--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ readme = "README.md"
 python = "^3.10"
 
 psutil = "^7.0.0"
+rasterio = "^1.4.3"
+geopandas = "^1.0.1"
+xarray = "^2025.3.1"
+pandas = "^2.2.3"
+rioxarray = "^0.18.2"
+rasterstats = "^0.20.0"
 
 
 
