--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,16 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 psutil = "^7.0.0"
+xarray = "^2025.3.1"
+rasterio = "^1.4.3"
+boto3 = "^1.37.23"
+pandas = "^2.2.3"
+geopandas = "^1.0.1"
+python-dotenv = "^1.1.0"
+rioxarray = "^0.18.2"
+numpy = "^2.2.4"
+rasterstats = "^0.20.0"
+affine = "^2.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
