--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ xarray = "^2025.3.1"
 pandas = "^2.2.3"
 rioxarray = "^0.18.2"
 rasterstats = "^0.20.0"
+streamlit = "^1.45.0"
+plotly = "^6.0.1"
 
 
 
